# proxmox-backup-qemu

./: .gitmodules  Cargo.toml  Makefile  build.rs  current-api.h  header-preamble.c  simpletest.c
debian/: changelog  control  copyright  install  install.libproxmox-backup-qemu  libproxmox-backup-qemu0-dev.install  libproxmox-backup-qemu0.install  libproxmox-backup-qemu0.symbols  rules
src/: backup.rs  capi_types.rs  commands.rs  lib.rs  registry.rs  restore.rs  shared_cache.rs  tools.rs  upload_queue.rs  worker_task.rs
