[package]
name = "proxmox-backup-qemu"
version = "1.3.2"
authors = [
    "Dietmar Maurer <dietmar@proxmox.com>",
    "Dominik Csapak <d.csapak@proxmox.com>",
    "Fabian Grünbichler <f.gruenbichler@proxmox.com>",
    "Stefan Reiter <s.reiter@proxmox.com>",
    "Thomas Lamprecht <t.lamprecht@proxmox.com>",
    "Wolfgang Bumiller <w.bumiller@proxmox.com>",
]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ['lib', 'cdylib', 'staticlib']

[build-dependencies]
cbindgen = "0.24.0"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
futures = "0.3"
hex = "0.4.3"
h2 = { version = "0.3", features = [ "stream" ] }
lazy_static = "1.4"
libc = "0.2"
once_cell = "1.5"
openssl = "0.10"

proxmox-async = "0.4"
proxmox-lang = "1"
proxmox-schema = { version = "1", features = [ "api-macro" ] }
proxmox-sys = { version = "0.4", features = [ "sortable-macro"] }

pbs-api-types = { git = "git://git.proxmox.com/git/proxmox-backup.git", rev = "8ebb984fbe2756392d438cc85b31f894829db06c" }
pbs-client    = { git = "git://git.proxmox.com/git/proxmox-backup.git", rev = "8ebb984fbe2756392d438cc85b31f894829db06c" }
pbs-datastore = { git = "git://git.proxmox.com/git/proxmox-backup.git", rev = "8ebb984fbe2756392d438cc85b31f894829db06c" }
pbs-key-config    = { git = "git://git.proxmox.com/git/proxmox-backup.git", rev = "8ebb984fbe2756392d438cc85b31f894829db06c" }
pbs-tools     = { git = "git://git.proxmox.com/git/proxmox-backup.git", rev = "8ebb984fbe2756392d438cc85b31f894829db06c" }

serde_json = "1.0"
tokio = { version = "1.6", features = [ "fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "time" ] }
tokio-stream = "0.1.1"
bincode = "1.0"
