[package]
name = "proxmox-backup-qemu"
version = "2.0.1"
authors = [
    "Dietmar Maurer <dietmar@proxmox.com>",
    "Dominik Csapak <d.csapak@proxmox.com>",
    "Fabian Grünbichler <f.gruenbichler@proxmox.com>",
    "Stefan Reiter <s.reiter@proxmox.com>",
    "Thomas Lamprecht <t.lamprecht@proxmox.com>",
    "Wolfgang Bumiller <w.bumiller@proxmox.com>",
]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ['lib', 'cdylib', 'staticlib']

[build-dependencies]
cbindgen = "0.27.0"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
# only so cargo-fairy picks it up..
cbindgen = "0.27.0"
futures = "0.3"
hex = "0.4.3"
h2 = { version = "0.4", features = [ "stream" ] }
lazy_static = "1.4"
libc = "0.2"
once_cell = "1.5"
openssl = "0.10"

proxmox-async = "0.5"
proxmox-lang = "1"
proxmox-schema = { version = "4", features = [ "api-macro" ] }
proxmox-sortable-macro = "1"
proxmox-sys = "1"

pbs-api-types  = { version = "1" }

pbs-client     = { path = "submodules/proxmox-backup/pbs-client" }
pbs-datastore  = { path = "submodules/proxmox-backup/pbs-datastore" }
pbs-key-config = { path = "submodules/proxmox-backup/pbs-key-config" }
pbs-tools      = { path = "submodules/proxmox-backup/pbs-tools" }

serde_json = "1.0"
tokio = { version = "1.6", features = [ "fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "time" ] }
tokio-stream = "0.1.1"
bincode = "1.0"
